--- a/kx-profile/public/index.html
+++ b/kx-profile/public/index.html
@@ -39,5 +39,94 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+
+  <script src="https://cubism.live2d.com/sdk-web/cubismcore/live2dcubismcore.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/dylanNew/live2d/webgl/Live2D/lib/live2d.min.js"></script>
+
+
+  </body>  
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+
+<!-- 
+  <!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>Live2d demo</title>
+    <script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/live2d.min.js"></script>
+    <style>
+      html,
+      body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+
+      body {
+        /* Credit: https://k-after.at.webry.info/201012/article_2.html */
+        background: url("https://userdisk.webry.biglobe.ne.jp/012/472/52/N000/000/000/129247956548116104261_BG43a.jpg")
+          center / cover;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+      }
+
+      #live2d {
+        cursor: grab;
+        width: auto;
+        height: 100%;
+      }
+
+      #live2d:active {
+        cursor: grabbing;
+      }
+    </style>
+  </head>
+
+  <body>
+    <canvas id="live2d" width="800" height="1600"></canvas>
+
+    <script>
+      window.addEventListener("load", () => {
+        // https://github.com/evrstr/live2d-widget-models
+        loadlive2d(
+          "live2d",
+          `https://cdn.jsdelivr.net/gh/evrstr/live2d-widget-models/live2d_evrstr/haru_seifuku/model.json`,
+          null
+        );
+      });
+    </script>
+  </body>
+</html> -->
